6.14.5.4
    plotMetrics(1):
        * Changed labels on "LDM Connections" plot from "Local LDM Port" and "Remote LDM Port" to
          "Sending Connections" and "Receiving Connections" to account for rtstats(1) connections.
        
6.14.5.3    2023-02-14T13:05:31-0700
    rtstats(1):
        * Renamed several functions to increase clarity
        * Restructured code
            * Moved that which could and should be done before sending reports from inside the
              report-sending code to an initialization step (e.g., MD5 checksum allocation, product
              class initialization, sequence number, HIYA)
            * Clarified logic by breaking complex functions into multiple functions
        * Improved internal documentation
        * Eliminated small memory-leak due to product class return value from HIYA not being freed

6.14.5.2    2023-02-12T12:57:49-0700
    rtstats(1):
        * Decreased the coupling between the statistics gathering module and the LDM reporting
          module
        * Corrected the logic regarding whether or not a HIYA should be sent

    Documentation:
        * Removed empty entry from list of general platform requirements

6.14.5.1  2023-01-31T16:15:39-0700
    rtstats(1):
        * Commented code about what function logs messages because the code is convoluted
        * Removed trailing newline in rtstats(1) log message to eliminate extraneous log message
        * Eliminated sending of NULLPROC before closing connection because it's superfluous
        * Documented return value of ldmsend_statsbin()
        * Eliminated possibility of overrun in formatting report
        * Eliminated unnecessary log message
        * Replaced abort() due to unsupported remote LDM version with log_error() and ECONNABORTED
          return value
        * man(1) page: Corrected description of number of bytes, number of products, and
          peak-latency parameters: they are not for "this hour" but since rtstats(1) was started
